static/style.css
body {
	color: #CCC;
	background-color: #434343;
	overflow-y: scroll;
	text-shadow: rgba(0, 0, 0, 0.01) 0 0 1px;
	-webkit-font-smoothing: antialiased;
}
#headerdiv {
	margin-top: 20px;
	font-family: 'Montserrat', sans-serif;
}
#headerdiv a {
	color: inherit;
}
#maindiv {
	margin-top: 8px;
	padding-top: 6px;
	padding-bottom: 6px;
	font-size: 1.1em;
	font-family: monospace;
}
#headerdiv, #maindiv {
	background-color: #222;
	max-width: 800px;
	margin-left: auto;
	margin-right: auto;
	border: 1px solid #000;
	box-shadow: 0px 0px 12px 1px #111;
}
#maindiv > div {
	margin-left: auto;
	margin-right: auto;
}
#titlediv {
	text-align: center;
	padding: 10px 10px 0px 10px;
	font-size: 4em;
	letter-spacing: 8px;
	text-transform: uppercase;
}
#userdiv {
	text-align: right;
	padding: 0px 5px 5px 5px;
	font-size: 0.8em;
}
#logdiv {
	float: right;
	padding: 4px 10px 10px;
}
.torrents, .view , .log{
	width: 100%;
	border-collapse: collapse;
}
.torrent:hover {
	background-color: #333;
}
.log td:first-child {
	border-top: 1px solid #111111;
}
.log td:last-child {
	border-bottom: 0;
}
.torrent > td, .torrentheadings > th, .log td{
	border-bottom: 1px solid #111111;
}
.torrent > td , .log td{
	padding: 5px 10px;
}
.torrentheadings > th {
	padding: 0px 10px 5px 10px;
}
.torrentname {
	max-width: 250px;
}
.torrentnamediv {
	width: 100%;
	height: 100%;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}
.torrentname a {
	color: inherit;
}
.torrentid, .torrentstatus, .torrentpercent, .torrentsize, .torrentratio {
	text-align: right;
}
.torrentid {
	font-weight: bold;
}
a {
	text-decoration: none;
}
a:hover {
	text-decoration: underline;
}
.stateseed {
	color: #2C2;
}
.stateidle {
	color: #C22;
}
.stateleech {
	color: #22C;
}
.statestarting, .statestarting a:visited {
	color: inherit;

}
.torrentheadings {
	font-weight: bold;
	font-size: 1.1em;
}
.torrentadd {
	text-align: left;
}
.torrentadd a {
	font-size: 1.2em;
	color: #2C2;
}
.torrentadd:hover {
	text-decoration: none;
}
.torrentheading {
	color: inherit;
}
#adddiv {
	width: 280px;
}
#adddiv input {
	box-sizing: border-box;
	margin-bottom: 5px;
}
#adddiv input:last-child {
	margin-bottom: 0px;
}
.torrentremove, .torrentremove a:visited {
	color: #C22;
}
#seriouslydiv {
	width: 600px;
}
.seriouslytitle {
	width: 600px;
}
.seriouslytitle, .seriouslyquestion, .viewtitle {
	text-align: center;
}
.seriouslytitle, .viewtitle {
	font-size: 1.4em;
	margin-bottom: 6px;
	word-wrap: break-word;
	padding-left: 8px;
	padding-right: 8px;
}
.seriouslyquestion, #seriouslybuttons {
	margin-left: auto;
	margin-right: auto;
}
.seriouslyquestion {
	width: 300px;
	font-size: 0.8em;
}
#seriouslybuttons {
	width: 300px;
}
#seriouslyyes, #seriouslyno {
	display: inline-block;
	width: 48%;
}
#seriouslybuttons input {
	width: 100%;
}
#seriouslyyes {
}
#seriouslyno {
	float: right;
}
#seriouslybuttons {
	margin-top: 10px;
}
#logindiv, #adduserdiv {
	max-width: 250px;
}
#logindiv input, #adduserdiv input {
	box-sizing: border-box;
	width: 100%;
	margin-bottom: 5px;
}
#loginfaileddiv, #adduserfaileddiv, #connectfaileddiv {
	font-size: 1.2em;
	color: #C22;
	text-align: center;
	margin-bottom: 5px;
}
#logindiv input:last-child, #adduserdiv input:last-child {
	margin-bottom: 0px;
}
#torrentpagesdiv {
	margin-top: 6px;
	font-size: 0.85em;
	text-align: center;
	word-spacing: 3px;
}
#torrentpagesdiv a {
	color: #555;
}
#torrentpagesdiv span {
	text-decoration: underline;
}
#userlistdiv {
	width: 450px;
}
#userlistdiv table {
	width: 100%;
	border-collapse: collapse;
	border: 1px solid #111111;
}
#userlistdiv th {
	font-size: 1.1em;	
}
#userlistdiv td {
	text-align: center;
}
#userlistdiv th, #userlistdiv td {
	border-bottom: 1px solid #111111;
	padding: 5px 10px;	
}
.userdel a {
	color: #C22;
}
#userlistdiv th a {
	color: #2C2;
	font-size: 1.1em;
}
.username {
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
	max-width: 200px;
}
.username a {
	color: inherit;
	text-decoration: underline;
}
.fullwidth {
	width: 100%;
}
#adddiv input:last-child {
	margin-top: 5px;
}
#ordiv {
	text-align: center;
	margin-bottom: 5px;
}
#adduserdiv input[type=checkbox] {
	width: initial;
}
.view td {
	padding-left: 8px;
	padding-right: 8px;
	font-size: 0.9em;
	text-align: center;
	padding-top: 4px;
}
.view th {
	padding-left: 4px;
	padding-right: 4px;
	font-size: 1.1em;
	border-bottom: 1px solid #111111;
	padding-bottom: 4px;
}
#settingsdiv {
	width: 250px;
}
#settingsdiv > form > div {
	margin-bottom: 4px;
	font-weight: bold;
}
#settingsdiv input {
	width: 100%;
	box-sizing: border-box;
	margin-bottom: 10px;
}
#settingsdiv input[type=submit] {
	margin-bottom: 4px;
}
#settingsdiv input.lessmargin {
	margin-bottom: 4px;
}
#settingsinfo, #settingserror {
	text-align: center;
	font-size: 1.4em;
}
#settingsinfo {
	color: #009933;
}
#settingserror {
	color: #993300;
}

